--- a/feature_areatakeoff.html
+++ b/feature_areatakeoff.html
@@ -40,6 +40,9 @@
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
                 <li class="nav-item">
+                    <a href="feature_contentmerge.html" class="nav-link">ContentMerge</a>
+                </li>
+                <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
@@ -164,6 +167,7 @@
                     <a href="index.html#installation">Installation</a>
                     <a href="feature_areatakeoff.html">AreaTakeOff</a>
                     <a href="feature_objmanager.html">ObjManager</a>
+                    <a href="feature_contentmerge.html">ContentMerge</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
