--- a/feature_contentmerge.html
+++ b/feature_contentmerge.html
@@ -111,8 +111,9 @@
                     <h3>Merge Layers</h3>
                     <ul class="screenshot-features">
                         <li>Combine multiple layers into one</li>
-                        <li>Preserve object properties</li>
-                        <li>Reduce model complexity</li>
+                        <li>Search bar on top</li>
+                        <li>Process layers inside blocks as well</li>
+                        <li>Layer tree respected</li>
                     </ul>
                 </div>
             </div>
@@ -123,9 +124,10 @@
                 <div class="screenshot-info">
                     <h3>Merge Materials</h3>
                     <ul class="screenshot-features">
-                        <li>Unify materials across objects</li>
-                        <li>Easy material reassignment</li>
-                        <li>Streamline rendering workflow</li>
+                        <li>Combine materials into one</li>
+                        <li>Search bar on top</li>
+                        <li>Process materials inside blocks as well</li>
+                        <li>Process materials assigned by layer and by object</li>
                     </ul>
                 </div>
             </div>
