--- a/feature_objmanager.html
+++ b/feature_objmanager.html
@@ -40,7 +40,7 @@
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
                 <li class="nav-item">
-                    <a href="feature_contentmerge.html" class="nav-link">ContentMerge</a>
+                    <a href="feature_contentmerger.html" class="nav-link">ContentMerger</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
@@ -124,7 +124,7 @@
                     <a href="index.html#installation">Installation</a>
                     <a href="feature_areatakeoff.html">AreaTakeOff</a>
                     <a href="feature_objmanager.html">ObjManager</a>
-                    <a href="feature_contentmerge.html">ContentMerge</a>
+                    <a href="feature_contentmerger.html">ContentMerger</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
