--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
                 <li class="nav-item">
-                    <a href="feature_contentmerge.html" class="nav-link">ContentMerge</a>
+                    <a href="feature_contentmerger.html" class="nav-link">ContentMerger</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
@@ -88,6 +88,15 @@
                             <div class="line"></div>
                         </div>
                         <div class="card-title">ObjManager</div>
+                    </a>
+                    <a href="feature_contentmerger.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                        <div class="card-header contentmerger"></div>
+                        <div class="card-content">
+                            <div class="line"></div>
+                            <div class="line short"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div class="card-title">ContentMerger</div>
                     </a>
                 </div>
             </div>
@@ -146,7 +155,7 @@
                     <a href="#installation">Installation</a>
                     <a href="feature_areatakeoff.html">AreaTakeOff</a>
                     <a href="feature_objmanager.html">ObjManager</a>
-                    <a href="feature_contentmerge.html">ContentMerge</a>
+                    <a href="feature_contentmerger.html">ContentMerger</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
