--- a/feature_contentmerger.html
+++ b/feature_contentmerger.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AreaTakeOff - LakeHouse Software Solution</title>
+    <title>ContentMerger - LakeHouse Software Solution</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -40,7 +40,7 @@
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
                 <li class="nav-item">
-                    <a href="feature_contentmerger.html" class="nav-link">ContentMerger</a>
+                    <a href="feature_contentmerge.html" class="nav-link">ContentMerger</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
@@ -58,11 +58,11 @@
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
             <div class="hero-content" style="text-align: center;">
-                <h1 class="hero-title">AreaTakeOff</h1>
+                <h1 class="hero-title">ContentMerger</h1>
                 <p class="hero-description">
-                    Live Area Takeoff In Rhino Viewport
+                    Merge Layers & Materials Effortlessly
                 </p>
-                <p class="gallery-description">Command: <strong>LakeHouseAreaTakeOff</strong></p>
+                <p class="gallery-description">Command: <strong>LakeHouseContentMerger</strong></p>
             </div>
         </div>
     </section>
@@ -81,65 +81,51 @@
                         class="demo-video"
                         onloadstart="this.volume=0"
                     >
-                        <source src="asset/areatakeoff/video.webm" type="video/webm">
-                        <source src="asset/areatakeoff/video.mp4" type="video/mp4">
+                        <source src="asset/contentmerger/video1.webm" type="video/webm">
+                        <source src="asset/contentmerger/video1.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+            <div class="video-showcase">
+                <div class="video-container">
+                    <video 
+                        autoplay 
+                        muted 
+                        loop 
+                        playsinline
+                        class="demo-video"
+                        onloadstart="this.volume=0"
+                    >
+                        <source src="asset/contentmerger/video2.webm" type="video/webm">
+                        <source src="asset/contentmerger/video2.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
             </div>
             <div class="screenshot-item">
-                <div class="screenshot-image" onclick="openModal('asset/areatakeoff/main viewport.png')">
-                    <img src="asset/areatakeoff/main viewport.png" alt="Main Viewport Interface">
+                <div class="screenshot-image" onclick="openModal('asset/contentmerger/merge layer.png')">
+                    <img src="asset/contentmerger/merge layer.png" alt="Merge Layer Screenshot">
                 </div>
                 <div class="screenshot-info">
-                    <h3>What You See<br>Is What You Get</h3>
+                    <h3>Merge Layers</h3>
                     <ul class="screenshot-features">
-                        <li>Interactive Drawing Viewport</li>
-                        <li>Real-Time Area Calculations</li>
-                        <li>Dynamic Shape Merging</li>
-                        <li>Auto Convert To m² Or ft² Regardless Of Your Model Unit System</li>
+                        <li>Combine multiple layers into one</li>
+                        <li>Preserve object properties</li>
+                        <li>Reduce model complexity</li>
                     </ul>
                 </div>
             </div>
-
             <div class="screenshot-item">
-                <div class="screenshot-image" onclick="openModal('asset/areatakeoff/layertable.png')">
-                    <img src="asset/areatakeoff/layertable.png" alt="Layer Management System">
+                <div class="screenshot-image" onclick="openModal('asset/contentmerger/merge material.png')">
+                    <img src="asset/contentmerger/merge material.png" alt="Merge Material Screenshot">
                 </div>
                 <div class="screenshot-info">
-                    <h3>Simple Management<br>By Layer Name</h3>
+                    <h3>Merge Materials</h3>
                     <ul class="screenshot-features">
-                        <li>Just Need [AREA] In The Layer Name As Keyword</li>
-                        <li>Take In Area Factor From Layer Name Curly Bracket</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="screenshot-item">
-                <div class="screenshot-image" onclick="openModal('asset/areatakeoff/gui.png')">
-                    <img src="asset/areatakeoff/gui.png" alt="GUI Control Panel">
-                </div>
-                <div class="screenshot-info">
-                    <h3>Customizable Control</h3>
-                    <ul class="screenshot-features">
-                        <li>Global Active/Deactive Switch</li>
-                        <li>Quick Sample Layer Setup</li>
-                        <li>Export Your Summary To Excel</li>
-                        <li>Customizable Text In Summary</li>
-                        <li>Sensitive And UI Setting</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="screenshot-item">
-                <div class="screenshot-image" onclick="openModal('asset/areatakeoff/excel.png')">
-                    <img src="asset/areatakeoff/excel.png" alt="Excel Integration">
-                </div>
-                <div class="screenshot-info">
-                    <h3>Export To Excel</h3>
-                    <ul class="screenshot-features">
-                        <li>Direct Excel Export</li>
-                        <li>Numeric Formatting For Other Usage</li>
+                        <li>Unify materials across objects</li>
+                        <li>Easy material reassignment</li>
+                        <li>Streamline rendering workflow</li>
                     </ul>
                 </div>
             </div>
@@ -162,12 +148,12 @@
                     <h3>LakeHouse</h3>
                     <p>Architect Workflow Toolkit</p>
                 </div>
-                                <div class="footer-links">
+                <div class="footer-links">
                     <a href="index.html#home">Home</a>
                     <a href="index.html#installation">Installation</a>
                     <a href="feature_areatakeoff.html">AreaTakeOff</a>
                     <a href="feature_objmanager.html">ObjManager</a>
-                    <a href="feature_contentmerger.html">ContentMerger</a>
+                    <a href="feature_contentmerge.html">ContentMerger</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
