--- a/feature_contentmerger.html
+++ b/feature_contentmerger.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ContentMerger - LakeHouse Software Solution</title>
+    <title>ContentMerge - LakeHouse Software Solution</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -40,7 +40,7 @@
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
                 <li class="nav-item">
-                    <a href="feature_contentmerge.html" class="nav-link">ContentMerger</a>
+                    <a href="feature_contentmerge.html" class="nav-link">ContentMerge</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
@@ -58,11 +58,11 @@
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
             <div class="hero-content" style="text-align: center;">
-                <h1 class="hero-title">ContentMerger</h1>
+                <h1 class="hero-title">ContentMerge</h1>
                 <p class="hero-description">
                     Merge Layers & Materials Effortlessly
                 </p>
-                <p class="gallery-description">Command: <strong>LakeHouseContentMerger</strong></p>
+                <p class="gallery-description">Command: <strong>LakeHouseContentMerge</strong></p>
             </div>
         </div>
     </section>
@@ -111,8 +111,9 @@
                     <h3>Merge Layers</h3>
                     <ul class="screenshot-features">
                         <li>Combine multiple layers into one</li>
-                        <li>Preserve object properties</li>
-                        <li>Reduce model complexity</li>
+                        <li>Search bar on top</li>
+                        <li>Process layers inside blocks as well</li>
+                        <li>Layer tree respected</li>
                     </ul>
                 </div>
             </div>
@@ -123,9 +124,10 @@
                 <div class="screenshot-info">
                     <h3>Merge Materials</h3>
                     <ul class="screenshot-features">
-                        <li>Unify materials across objects</li>
-                        <li>Easy material reassignment</li>
-                        <li>Streamline rendering workflow</li>
+                        <li>Combine materials into one</li>
+                        <li>Search bar on top</li>
+                        <li>Process materials inside blocks as well</li>
+                        <li>Process materials assigned by layer and by object</li>
                     </ul>
                 </div>
             </div>
@@ -153,7 +155,7 @@
                     <a href="index.html#installation">Installation</a>
                     <a href="feature_areatakeoff.html">AreaTakeOff</a>
                     <a href="feature_objmanager.html">ObjManager</a>
-                    <a href="feature_contentmerge.html">ContentMerger</a>
+                    <a href="feature_contentmerge.html">ContentMerge</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
