--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h1 class="hero-title">LakeHouse</h1>
                 <h2 class="hero-subtitle">(Beta)</h2>
                 <p class="hero-description">
-                    Make Architects Go Home Early Again.
+                    Make Architects Go-Home-Early Again.
                 </p>
                 <div class="hero-buttons">
                     <a href="feature_areatakeoff.html" class="btn btn-primary">Key Feature</a>
