--- a/feature_contentmerger.html
+++ b/feature_contentmerger.html
@@ -39,24 +39,10 @@
                 </svg>
             </div>
             <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="index.html#home" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="index.html#installation" class="nav-link">Installation</a>
-                </li>
-                <li class="nav-item">
-                    <a href="feature_areatakeoff.html" class="nav-link">AreaTakeOff</a>
-                </li>
-                <li class="nav-item">
-                    <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
-                </li>
-                <li class="nav-item">
-                    <a href="feature_contentmerge.html" class="nav-link">ContentMerge</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </li>
+                <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="feature.html" class="nav-link">Feature</a></li>
+                <li class="nav-item"><a href="index.html#installation" class="nav-link">Installation</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -164,10 +150,8 @@
                 </div>
                 <div class="footer-links">
                     <a href="index.html#home">Home</a>
+                    <a href="feature.html">Feature</a>
                     <a href="index.html#installation">Installation</a>
-                    <a href="feature_areatakeoff.html">AreaTakeOff</a>
-                    <a href="feature_objmanager.html">ObjManager</a>
-                    <a href="feature_contentmerge.html">ContentMerge</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
