--- a/index.html
+++ b/index.html
@@ -39,24 +39,10 @@
                 </svg>
             </div>
             <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#home" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#installation" class="nav-link">Installation</a>
-                </li>
-                <li class="nav-item">
-                    <a href="feature_areatakeoff.html" class="nav-link">AreaTakeOff</a>
-                </li>
-                <li class="nav-item">
-                    <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
-                </li>
-                <li class="nav-item">
-                    <a href="feature_contentmerger.html" class="nav-link">ContentMerger</a>
-                </li>
-                <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
-                </li>
+                <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="feature.html" class="nav-link">Feature</a></li>
+                <li class="nav-item"><a href="index.html#installation" class="nav-link">Installation</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -68,15 +54,22 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
+        <!-- Background Video limited to hero section -->
+        <div class="video-background">
+            <video autoplay muted loop playsinline preload="auto">
+                <source src="asset/water%20background.mp4" type="video/mp4">
+                <source src="asset/water%20background.webm" type="video/webm">
+            </video>
+        </div>
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">LakeHouse</h1>
-                <h2 class="hero-subtitle">(Beta)</h2>
+                <h2 class="hero-subtitle">Dumb simple Rhino plugin.<br>No Grasshopper Skill Required.</h2>
                 <p class="hero-description">
                     Make Architects Go-Home-Early Again.
                 </p>
                 <div class="hero-buttons">
-                    <a href="feature_areatakeoff.html" class="btn btn-primary">Key Feature</a>
+                    <a href="feature.html" class="btn btn-primary">Key Features</a>
                     <a href="#installation" class="btn btn-secondary">Installation Guide</a>
                 </div>
             </div>
@@ -115,11 +108,6 @@
         </div>
     </section>
 
-
-
-
-
-
     <!-- Installation Section -->
     <section id="installation" class="installation-section">
         <div class="container">
@@ -153,7 +141,6 @@
         </div>
     </section>
 
-
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -163,11 +150,9 @@
                     <p>Architect Workflow Toolkit</p>
                 </div>
                 <div class="footer-links">
-                    <a href="#home">Home</a>
-                    <a href="#installation">Installation</a>
-                    <a href="feature_areatakeoff.html">AreaTakeOff</a>
-                    <a href="feature_objmanager.html">ObjManager</a>
-                    <a href="feature_contentmerger.html">ContentMerger</a>
+                    <a href="index.html#home">Home</a>
+                    <a href="feature.html">Feature</a>
+                    <a href="index.html#installation">Installation</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
