--- a/feature_contentmerger.html
+++ b/feature_contentmerger.html
@@ -56,11 +56,11 @@
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
             <div class="hero-content" style="text-align: center;">
-                <h1 class="hero-title">ContentMerge</h1>
+                <h1 class="hero-title">ContentMerger</h1>
                 <p class="hero-description">
                     Merge Layers & Materials Effortlessly
                 </p>
-                <p class="gallery-description">Command: <strong>LakeHouseContentMerge</strong></p>
+                <p class="gallery-description">Command: <strong>LakeHouseContentMerger</strong></p>
             </div>
         </div>
     </section>
