--- a/feature.html
+++ b/feature.html
@@ -62,6 +62,14 @@
                     <h3>ContentMerger</h3>
                     <p>Consolidate duplicated blocks, layers and materials into a clean, lightweight model.</p>
                 </a>
+                <a href="feature_layercolorrandomizer.html" class="feature-card glass-card">
+                    <h3>LayerColorRandomizer</h3>
+                    <p>Randomize layer colors instantly with customizable color palettes and filtering options.</p>
+                </a>
+                <a href="feature_randomselect.html" class="feature-card glass-card">
+                    <h3>RandomSelect</h3>
+                    <p>Smart random object selection with percentage control and quick group bundling.</p>
+                </a>
             </div>
         </div>
     </section>
