--- a/index.html
+++ b/index.html
@@ -103,6 +103,24 @@
                         </div>
                         <div class="card-title">ContentMerger</div>
                     </a>
+                    <a href="feature_layercolorrandomizer.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                        <div class="card-header layercolorrandomizer"></div>
+                        <div class="card-content">
+                            <div class="line"></div>
+                            <div class="line short"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div class="card-title">LayerColorRandomizer</div>
+                    </a>
+                    <a href="feature_randomselect.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                        <div class="card-header randomselect"></div>
+                        <div class="card-content">
+                            <div class="line"></div>
+                            <div class="line short"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div class="card-title">RandomSelect</div>
+                    </a>
                 </div>
             </div>
         </div>
