--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="hero-cards-container">
+                <div class="hero-cards-container" id="feature-carousel">
                     
-                    <a href="feature_areatakeoff.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                    <a href="feature_areatakeoff.html" class="floating-card" data-card-index="0" style="text-decoration: none; cursor: pointer;">
                         <div class="card-header areatakeoff"></div>
                         <div class="card-content">
                             <div class="line"></div>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="card-title">AreaTakeOff</div>
                     </a>
-                    <a href="feature_objmanager.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                    <a href="feature_objmanager.html" class="floating-card" data-card-index="1" style="text-decoration: none; cursor: pointer;">
                         <div class="card-header objmanager"></div>
                         <div class="card-content">
                             <div class="line"></div>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="card-title">ObjManager</div>
                     </a>
-                    <a href="feature_contentmerger.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                    <a href="feature_contentmerger.html" class="floating-card" data-card-index="2" style="text-decoration: none; cursor: pointer;">
                         <div class="card-header contentmerger"></div>
                         <div class="card-content">
                             <div class="line"></div>
@@ -103,7 +103,7 @@
                         </div>
                         <div class="card-title">ContentMerger</div>
                     </a>
-                    <a href="feature_layercolorrandomizer.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                    <a href="feature_layercolorrandomizer.html" class="floating-card" data-card-index="3" style="text-decoration: none; cursor: pointer;">
                         <div class="card-header layercolorrandomizer"></div>
                         <div class="card-content">
                             <div class="line"></div>
@@ -112,7 +112,7 @@
                         </div>
                         <div class="card-title">LayerColorRandomizer</div>
                     </a>
-                    <a href="feature_randomselect.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
+                    <a href="feature_randomselect.html" class="floating-card" data-card-index="4" style="text-decoration: none; cursor: pointer;">
                         <div class="card-header randomselect"></div>
                         <div class="card-content">
                             <div class="line"></div>
