--- a/feature.html
+++ b/feature.html
@@ -80,7 +80,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <h3>LakeHouse</h3>
-                    <p>Architect Workflow Toolkit</p>
+                    <p>Make Architects Go-Home-Early Again</p>
                 </div>
                 <div class="footer-links">
                     <a href="index.html#home">Home</a>
