--- a/feature.html
+++ b/feature.html
@@ -52,23 +52,23 @@
             <div class="features-grid">
                 <a href="feature_areatakeoff.html" class="feature-card glass-card">
                     <h3>AreaTakeOff</h3>
-                    <p>Rapidly calculate area schedules directly from layers without manual tracing.</p>
+                    <p>Live Area Takeoff Summary In Rhino Viewport</p>
                 </a>
                 <a href="feature_objmanager.html" class="feature-card glass-card">
                     <h3>ObjManager</h3>
-                    <p>Organize, search and batch-edit Rhino geometry with a modern, intuitive UI.</p>
+                    <p>Batch Object Transformation With Random Rotation & Scale</p>
                 </a>
                 <a href="feature_contentmerger.html" class="feature-card glass-card">
                     <h3>ContentMerger</h3>
-                    <p>Consolidate duplicated blocks, layers and materials into a clean, lightweight model.</p>
+                    <p>Merge Layers & Materials Effortlessly, Even In Block Definitions</p>
                 </a>
                 <a href="feature_layercolorrandomizer.html" class="feature-card glass-card">
                     <h3>LayerColorRandomizer</h3>
-                    <p>Randomize layer colors instantly with customizable color palettes and filtering options.</p>
+                    <p>Randomize Layer Colors Instantly</p>
                 </a>
                 <a href="feature_randomselect.html" class="feature-card glass-card">
                     <h3>RandomSelect</h3>
-                    <p>Smart random object selection with percentage control and quick group bundling.</p>
+                    <p>Smart Random Object Selection</p>
                 </a>
             </div>
         </div>
