--- a/feature_contentmerger.html
+++ b/feature_contentmerger.html
@@ -55,7 +55,7 @@
             <div class="hero-content" style="text-align: center;">
                 <h1 class="hero-title">ContentMerger</h1>
                 <p class="hero-description">
-                    Merge Layers & Materials Effortlessly
+                    Merge layers and materials effortlessly, great for model cleanup, especially for models where you have block definitions that prevent layers from being deleted or selected, or models where you have previously imported content and have introduced material variation of the same design intent.
                 </p>
                 <p class="gallery-description">Command: <strong>LakeHouseContentMerger</strong></p>
             </div>
