--- a/feature_layercolorrandomizer.html
+++ b/feature_layercolorrandomizer.html
@@ -55,7 +55,7 @@
             <div class="hero-content" style="text-align: center;">
                 <h1 class="hero-title">LayerColorRandomizer</h1>
                 <p class="hero-description">
-                    Randomize Layer Colors Instantly
+                    Randomize layer colors to allow quick visualization of the layers using different colors rather than default black or white.
                 </p>
                 <p class="gallery-description">Command: <strong>LakeHouseLayerColorRandomizer</strong></p>
             </div>
