--- a/feature_objmanager.html
+++ b/feature_objmanager.html
@@ -55,7 +55,7 @@
             <div class="hero-content" style="text-align: center;">
                 <h1 class="hero-title">ObjManager</h1>
                 <p class="hero-description">
-                    Batch Object Transformation
+                    Batch object transformation to apply random or fixed rotation to picked objects, as well as apply a random vertical scale to the picked objects. This is useful for creating random variation of a model such as entourage modification to achieve a less repetitive look.
                 </p>
                 <p class="gallery-description">Command: <strong>LakeHouseObjManager</strong></p>
             </div>
