--- a/feature_randomselect.html
+++ b/feature_randomselect.html
@@ -55,7 +55,7 @@
             <div class="hero-content" style="text-align: center;">
                 <h1 class="hero-title">RandomSelect</h1>
                 <p class="hero-description">
-                    Smart Random Object Selection
+                    Randomly reduce selection by desired percentage or break them into groups. Great for introducing variation for rendering purposes.
                 </p>
                 <p class="gallery-description">Command: <strong>LakeHouseRandomSelect</strong></p>
             </div>
