--- a/feature_objmanager.html
+++ b/feature_objmanager.html
@@ -53,11 +53,11 @@
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
             <div class="hero-content" style="text-align: center;">
-                <h1 class="hero-title">ObjManager</h1>
-                <p class="hero-description">
+                <h1 class="hero-title" data-feature="feature_objmanager">ObjManager</h1>
+                <p class="hero-description" data-feature="feature_objmanager">
                     Batch object transformation to apply random or fixed rotation to picked objects, as well as apply a random vertical scale to the picked objects. This is useful for creating random variation of a model such as entourage modification to achieve a less repetitive look.
                 </p>
-                <p class="gallery-description">Command: <strong>LakeHouseObjManager</strong></p>
+                <p class="gallery-description">Command: <strong data-feature="feature_objmanager">LakeHouseObjManager</strong></p>
             </div>
         </div>
     </section>
