--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     Make Architects Go-Home-Early Again.
                 </p>
                 <div class="hero-buttons">
-                    <a href="feature.html" class="btn btn-primary">Key Features</a>
+                    <a href="feature.html" class="btn btn-primary">Explore Features</a>
                     <a href="#installation" class="btn btn-secondary">Installation Guide</a>
                 </div>
             </div>
