--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">LakeHouse</h1>
-                <h2 class="hero-subtitle">Dumb Simple Rhino Plugin.<br>No Grasshopper Skill Required.</h2>
+                <h2 class="hero-subtitle">Simple To Use Rhino Plugin.<br>No Grasshopper Skill Required.</h2>
                 <p class="hero-description">
                     Make Architects Go-Home-Early Again.
                 </p>
