--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Toolbar Section -->
+        <div class="container">
+            <div class="toolbar-section">
+                <div class="toolbar-image">
+                    <img src="asset/installation/toolbar.png" alt="LakeHouse Toolbar" onclick="openModal('asset/installation/toolbar.png')">
+                    <p class="toolbar-caption">You can also add the toolbar to your workspace by using "Toolbar" command in Rhino and activate it from dropdown menu</p>
+                </div>
+            </div>
+        </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
