--- a/feature.html
+++ b/feature.html
@@ -67,24 +67,28 @@
             <h2 class="section-title">Key Features</h2>
             <div class="features-grid">
                 <a href="feature_areatakeoff.html" class="feature-card glass-card">
-                    <h3 data-feature="feature_areatakeoff">AreaTakeOff</h3>
-                    <p data-feature="feature_areatakeoff">Dynamic Area Takeoff Summary In Rhino Viewport</p>
+                    <h3>AreaTakeOff</h3>
+                    <p>Dynamic Area Takeoff Summary In Rhino Viewport</p>
                 </a>
                 <a href="feature_objmanager.html" class="feature-card glass-card">
-                    <h3 data-feature="feature_objmanager">ObjManager</h3>
-                    <p data-feature="feature_objmanager">Batch Object Transformation With Random Rotation & Scale</p>
+                    <h3>ObjManager</h3>
+                    <p>Batch Object Transformation With Random Rotation & Scale</p>
                 </a>
                 <a href="feature_contentmerger.html" class="feature-card glass-card">
-                    <h3 data-feature="feature_contentmerger">ContentMerger</h3>
-                    <p data-feature="feature_contentmerger">Merge Layers & Materials Effortlessly, Even In Block Definitions</p>
+                    <h3>ContentMerger</h3>
+                    <p>Merge Layers & Materials Effortlessly, Even In Block Definitions</p>
                 </a>
                 <a href="feature_layercolorrandomizer.html" class="feature-card glass-card">
-                    <h3 data-feature="feature_layercolorrandomizer">LayerColorRandomizer</h3>
-                    <p data-feature="feature_layercolorrandomizer">Randomize Layer Colors Instantly</p>
+                    <h3>LayerColorRandomizer</h3>
+                    <p>Randomize Layer Colors Instantly</p>
                 </a>
                 <a href="feature_randomselect.html" class="feature-card glass-card">
-                    <h3 data-feature="feature_randomselect">RandomSelect</h3>
-                    <p data-feature="feature_randomselect">Random Object Selection Assistant</p>
+                    <h3>RandomSelect</h3>
+                    <p>Random Object Selection Assistant</p>
+                </a>
+                <a href="feature_blockusagepreview.html" class="feature-card glass-card">
+                    <h3>PreviewBlockUsage</h3>
+                    <p>Live Preview Block Usage In Model With Filter</p>
                 </a>
             </div>
         </div>
