--- a/feature_layercolorrandomizer.html
+++ b/feature_layercolorrandomizer.html
@@ -80,11 +80,9 @@
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
             <div class="hero-content" style="text-align: center;">
-                <h1 class="hero-title" data-feature="feature_layercolorrandomizer">LayerColorRandomizer</h1>
-                <p class="hero-description" data-feature="feature_layercolorrandomizer">
-                    Randomize layer colors to allow quick visualization of the layers using different colors rather than default black or white.
-                </p>
-                <p class="gallery-description">Command: <strong data-feature="feature_layercolorrandomizer">LakeHouseLayerColorRandomizer</strong></p>
+                <h1 class="hero-title">LayerColorRandomizer</h1>
+                <p class="hero-description">Randomize layer colors to allow quick visualization of the layers using different colors rather than default black or white.</p>
+                <p class="gallery-description">Command: <strong>LakeHouseLayerColorRandomizer</strong></p>
             </div>
         </div>
     </section>
