--- a/feature_randomselect.html
+++ b/feature_randomselect.html
@@ -80,11 +80,9 @@
     <section class="hero" style="min-height: 50vh;">
         <div class="hero-container" style="grid-template-columns: 1fr;">
             <div class="hero-content" style="text-align: center;">
-                <h1 class="hero-title" data-feature="feature_randomselect">RandomSelect</h1>
-                <p class="hero-description" data-feature="feature_randomselect">
-                    Randomly reduce selection by desired percentage or break them into groups. Great for introducing variation for rendering purposes.
-                </p>
-                <p class="gallery-description">Command: <strong data-feature="feature_randomselect">LakeHouseRandomSelect</strong></p>
+                <h1 class="hero-title">RandomSelect</h1>
+                <p class="hero-description">Randomly reduce selection by desired percentage or break them into groups. Great for introducing variation for rendering purposes.</p>
+                <p class="gallery-description">Command: <strong>LakeHouseRandomSelect</strong></p>
             </div>
         </div>
     </section>
